# visual_mapper

./: LICENSE  README.md
code/PoC/: README.md  calibration_parameters.conf  proof_of_concept.py  proof_of_concept_base_and_tip.py  proof_of_concept_base_only.py  proof_of_concept_image_distortion.py
code/ROS/src/visual_mapping/: CMakeLists.txt
code/ROS/src/visual_mapping/config/: camera_cones_detector.yaml
code/ROS/src/visual_mapping/include/camera_cones_detector/: camera_cones_detector.hpp
code/ROS/src/visual_mapping/launch/: camera_cones_detector_node.launch.py
code/bird_eye_view/: birdeye.m  birdeye.mat
code/homograpy/src/: bird_eye_view_node.py
code/visual_mapping/: package.xml
code/visual_mapping/src/: camera_cones_detector_node.cpp
code/yolo/: yolo_train.out  yolo_training.sh
code/yolo/yolo_outputs/train/: args.yaml  results.csv
datasets/fsoco_sample/: suca.py
docs/: proposal.odt  run_yolo_on_ros.odt
